--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,12 @@
 <body>
   <app-root></app-root>
 </body>
+
+
+<script>
+  $(document).ready(function() {
+    $(".dropdown-trigger").dropdown();
+   });
+
+</script>
 </html>
