--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <script>
   $(document).ready(function() {
-    $(".dropdown-trigger").dropdown();
+    $("#dropdown-trigger").dropdown();
    });
 
 </script>
